zebra-state/src/service/finalized_state/disk_format/tests/snapshots/column_family_names.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_names
---
[
  "balance_by_transparent_addr",
  "block_header_by_height",
  "default",
  "hash_by_height",
  "hash_by_tx_loc",
  "height_by_hash",
  "history_tree",
  "orchard_anchors",
  "orchard_issued_asset_ref_notes",
  "orchard_issued_assets",
  "orchard_note_commitment_subtree",
  "orchard_note_commitment_tree",
  "orchard_nullifiers",
  "sapling_anchors",
  "sapling_note_commitment_subtree",
  "sapling_note_commitment_tree",
  "sapling_nullifiers",
  "sprout_anchors",
  "sprout_note_commitment_tree",
  "sprout_nullifiers",
  "tip_chain_value_pool",
  "tx_by_loc",
  "tx_loc_by_hash",
  "tx_loc_by_transparent_addr_loc",
  "utxo_by_out_loc",
  "utxo_loc_by_transparent_addr_loc",
]
